# gdscript-foli

./: Cargo.toml  README.md
docs/: README.md
src/: main.rs  node_ext.rs  query_struct.rs  util.rs
src/lint/: class_name_extends.rs  export_var_order.rs  mod.rs  naming_convention.rs  no_print_call.rs  typed_function_signature.rs
