[package]
name = "gdscript-foli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = "4"
dotenvy = "0"
miette = { version = "7", features = ["fancy"] }
owo-colors = "4"
thiserror = "2"
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }
tree-sitter = "0"
tree-sitter-gdscript = "4"
walkdir = "2"
